--- a/style.css
+++ b/style.css
@@ -54,20 +54,32 @@ nav {
     border-radius: 5px;
 }
 
-.profile-icon {
-    margin-right: 20px;
+.nav-profile-icon {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
 }
+
 
 .profile-icon img {
     width: 40px;
     height: 40px;
+    object-fit: cover;
     border-radius: 50%;
     cursor: pointer;
+}
+
+.welcome-msg {
+    color: white;
+    font-size: 18px;
+    margin-left: 20px;
 }
 
 main {
     text-align: center;
     padding: 20px;
+    min-height: 500px;
 }
 
 .description {
