--- a/style.css
+++ b/style.css
@@ -454,3 +454,15 @@ form { display: flex; flex-direction: column; }
         margin: auto;
     }
 }
+
+.toggle-comments-button {
+    background-color: #3a885d;
+    color: white;
+    border: none;
+    padding: 6px 12px;
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 6px;
+    width: 100%;
+}
+
